--- a/package.json
+++ b/package.json
@@ -18,5 +18,11 @@
     "http-errors": "~1.6.3",
     "mongoose": "^8.3.3",
     "morgan": "~1.9.1"
-  }
+  },
+  "description": "In this tutorial, we will learn how to insert, save, and store data from an HTML form into a MongoDB database using Mongoose in a Node.js Express app in this comprehensive tutorial. We'll cover everything from setting up your development environment to writing the necessary Node.js, Mongoose, and HTML code.",
+  "main": "app.js",
+  "devDependencies": {},
+  "keywords": [],
+  "author": "",
+  "license": "ISC"
 }
